# hackathon-app

./: .dockerignore  .gitignore  Dockerfile  Graph script.py  README.md  main.py  pyproject.toml  requirements.txt  summary_change.py
.github/workflows/: google-cloudrun-docker.yml
wlapp/: agent.py  discarded.py  graph.ipynb  graph.py  graph2.ipynb  streamlit-app.py
